style home page and render paginated posts

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@ a, a:hover { text-decoration: none; }
 
 .title {
   font-size: 10pt;
-  color: $light-grey;
+  color: black;
 }
 .subtext {
   font-size: 7pt;
