--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
 <section class="content">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+  <br /><br/>
+  <% @posts.each_with_index do |post, idx| %>
+    <div class="post-wrapper">
+      <div class="title-wrapper">
+        <p class="title"> <%= idx + 1 %>. <%= post.title %></p>
+        <% if post.url %>
+          <p class="subhead comhead"> (<%= post.url %>)</p>      
+        <% end %>
+      </div>
+      <div class="info-wrapper">
+        <p class="subtext">
+          10 points by <%= post.user.username %> <%= time_ago_in_words(post.created_at) %> |
+          <%= post.comments.size %> comments</p>
+      </div>
+    </div>
+  <% end %>
 </section>
+<%= will_paginate(@posts) %>
