--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -12,7 +12,6 @@
 .content {
   background: $grey-background;
   padding: 0;
-  margin-top: -1.4em;
   height: 100%;
   min-height: 20em;
   padding-left: 1em;
@@ -35,7 +34,7 @@ a.title-link {
   padding-left: 12px;
   font-weight: bold;
 }
-.nav-link, .nav-link:hover, .title-link, .title-link:hover {
+.nav-link, .title-link {
   color: black;
   margin: auto;
   border-right: 1px solid black;
