--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,24 +1,23 @@
-<p id="notice"><%= notice %></p>
+<section class="content"><br/>
+  <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+  <div class="title-wrapper">
+    <a href="/posts/<%= @post.id %>"><p class="title"> <%=@post.title %></p></a>
+    <% if @post.url %>
+      <p class="subhead comhead"> (<%=@post.url %>)</p>
+    <% end %>
+  </div>
+  <div class="info-wrapper">
+    <p class="subtext">
+      10 points by <a href="#"><%= @post.user.username %></a> <%= time_ago_in_words(@post.created_at) %> |
+      <a href="#"><%= @post.comments.size %> comments</p></a>
+  </div>
+  <% if @post.body %>
+    <div class="post-body">
+      <p> <%= @post.body %></p>
+    </div>
+  <% end %>
 
-<p>
-  <strong>Url:</strong>
-  <%= @post.url %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Back', posts_path %>
+</section>
