create and style form for new users

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,17 @@
-// Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// posts show page
+
+
+.simple-submit {
+  padding: 0px 5px 1px;
+  margin: 0;
+  line-height: 0;
+  font-size: 7pt;
+  margin: 1em 0 1em;
+}
+.comment-field {
+  width: 30em;
+  height: 8em;
+}
+.form-label {
+  width: 6em;
+}
