--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import 'bourbon';
 @import 'animate';
 @import 'pages';
+@import 'posts';
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
