--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,11 +8,11 @@
     <%= link_to 'ask', root_path, class: 'nav-link' %>
     <%= link_to 'jobs', root_path, class: 'nav-link' %>
     <%= link_to 'submit', root_path, class: 'nav-link' %>
-    <% if current_user %>
+    <% if session[:user_id] %>
+      <%= link_to 'logout', logout_path, method: :delete, class: 'nav-link' %>
+    <% else %>
       <%= link_to 'login', login_path, class: 'nav-link' %>
-      <%= link_to 'signup' new_user_path, class: 'nav-link' %>
-    <%= else %>
-      <%= link_to 'logout', logout_path, class: 'nav-link' %>
+      <%= link_to 'signup', new_user_path, class: 'nav-link' %>
     <% end %>
   </div>
 
