--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
 <% if current_user %>
-  <%= form_for [@post, @comment], class: 'form-horizontal' do |f| %>
+  <%= form_for [@post, @comment], class: 'form-horizontal first-comment-form' do |f| %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.hidden_field :user_id, value: current_user.id %>
     <%= f.text_area :body, class: 'comment-field' %><br/>
